# Parcer-Vacancy

./: README.md  pyproject.toml
main/: users_interface.py
src/: fucnction_for_vacancies.py  get_api_data.py  vacancy.py  writing_data.py
tests/: conftest.py  test_function_for_vacancies.py  test_vacancy.json  test_vacancy.py  test_writing_data.py
