[tool.poetry]
name = "parcervacancy"
version = "0.1.0"
description = ""
authors = ["samifalov-mihail <misasamofalov611@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pytest-cov = "^4.1.0"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
